infra/helm/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-app-service
          port: 80
          filters:
            - type: ExtensionRef
              extensionRef:
                group: gateway.k8s.aws
                kind: TargetGroupConfiguration
                name: my-app-tg-config
